--- a/src/main/resources/assets/sandboxmod2/lang/en_US.lang
+++ b/src/main/resources/assets/sandboxmod2/lang/en_US.lang
@@ -10,6 +10,15 @@ item.itemRubyBow.name=Ruby Bow
 item.itemIronApple.name=Iron Apple
 item.itemDiamondApple.name=Diamond Apple
 item.itemEnderCrystal.name=Ender Crystal Spawner
+item.itemPrimedTNT.name=Primed TNT Spawner
+item.itemMedkit.name=Medkit
+entity.entityHuman.name=Human
+entity.entityHumanArcher.name=Human Archer
+entity.entityHumanKnight.name=Human Knight
+entity.entityHumanArcherEvil.name=Human Archer (Evil)
+entity.entityHumanKnightEvil.name=Human Knight (Evil)
+entity.entityHumanBase.name=Base Human
+entity.entityHumanBaseEvil.name=Base Human (Evil)
 attribute.RubySword1=+ Same damage as the Diamond Sword.
 attribute.RubySword2=+ Can stack up to 5 swords at a time.
 attribute.RubySword3=- Less stronger than the Diamond Sword.
@@ -31,3 +40,4 @@ attribute.DiamondApple1=Regeneration: 40 seconds.
 attribute.DiamondApple2=Resistance: 7 minutes and 30 seconds.
 attribute.DiamondApple3=Fire Resistance: 7 minutes and 30 seconds.
 attribute.DiamondApple4=Speed: 2 minutes and 30 seconds.
+attribute.Medkit1=+ Heals 3.5 hearts.
