--- a/src/main/resources/assets/sandboxmod2/lang/en_US.lang
+++ b/src/main/resources/assets/sandboxmod2/lang/en_US.lang
@@ -12,6 +12,9 @@ item.itemDiamondApple.name=Diamond Apple
 item.itemEnderCrystal.name=Ender Crystal Spawner
 item.itemPrimedTNT.name=Primed TNT Spawner
 item.itemMedkit.name=Medkit
+item.itemRapidFireBow.name=Rapid-Fire Bow
+item.itemRapidFireBowRuby.name=Rapid-Fire Ruby Bow
+item.itemGoldMedkit.name=Golden Medkit
 entity.entityHuman.name=Human
 entity.entityHumanArcher.name=Human Archer
 entity.entityHumanKnight.name=Human Knight
@@ -19,6 +22,8 @@ entity.entityHumanArcherEvil.name=Human Archer (Evil)
 entity.entityHumanKnightEvil.name=Human Knight (Evil)
 entity.entityHumanBase.name=Base Human
 entity.entityHumanBaseEvil.name=Base Human (Evil)
+entity.entityAIGiant.name=Giant (Boss)
+entity.entityHerobrine.name=Herobrine
 attribute.RubySword1=+ Same damage as the Diamond Sword.
 attribute.RubySword2=+ Can stack up to 5 swords at a time.
 attribute.RubySword3=- Less stronger than the Diamond Sword.
@@ -41,6 +46,14 @@ attribute.DiamondApple2=Resistance: 7 minutes and 30 seconds.
 attribute.DiamondApple3=Fire Resistance: 7 minutes and 30 seconds.
 attribute.DiamondApple4=Speed: 2 minutes and 30 seconds.
 attribute.Medkit1=+ Heals 3.5 hearts.
+attribute.GoldMedkit1=+ Heals 5 hearts.
+attribute.RapidFireBow1=+ Fires faster than a normal Bow.
+attribute.RapidFireBow2=+ Keeps firing
+attribute.RapidFireBow2b=until you run out of arrows.
+attribute.RapidFireBow1Ruby=+ Fires faster than a Ruby Bow.
+attribute.RapidFireBow3Ruby=+ Keeps most of the stats
+attribute.RapidFireBow3Rubyb=from the Ruby Bow.
+attribute.RapidFireBows1=- Cannot be enchanted.
 humanname.humanArcher=Archer 
 humanname.humanKnight=Knight 
 humanname.humanEvilArcher=Evil Archer 
